forms updated and fixed align

--- a/app/assets/stylesheets/components/_avatars.scss
+++ b/app/assets/stylesheets/components/_avatars.scss
@@ -7,6 +7,11 @@
   width: 100px;
   border-radius: 100%;
 }
+.avatar-large-sq {
+  width: 100px;
+  width: 100px;
+  border: white 1px solid;
+}
 .avatar-bordered {
   width: 100px;
   height: 100px;
