--- a/app/assets/stylesheets/components/_feature.scss
+++ b/app/assets/stylesheets/components/_feature.scss
@@ -1,7 +1,10 @@
+
+
 .tab-color {
   border-top: 2px solid gray;
   background: #F7F7F7;
-  padding: 25px;
+  padding: 22px;
+  overflow: hidden;
 }
 
 .status {
